--- a/app/src/main/webapp/VAADIN/themes/mytheme/styles.scss
+++ b/app/src/main/webapp/VAADIN/themes/mytheme/styles.scss
@@ -1,10 +1,15 @@
 @import "mytheme.scss";
 @import "addons.scss";
+@import "designs.scss";
 
 // This file prefixes all rules with the theme name to avoid causing conflicts with other themes.
 // The actual styles should be defined in mytheme.scss
 
 .mytheme {
+  @include vaadin-crud-template;
+  @include vaadin-form-template;
+  @include vaadin-tiles-template;
+  @include vaadin-app-shell-template;
   @include addons;
   @include mytheme;
 
