--- a/app/src/main/resources/g4/templates/templateDesign.html
+++ b/app/src/main/resources/g4/templates/templateDesign.html
@@ -10,7 +10,7 @@
    <vaadin-css-layout style-name="navigation-bar-container" width="200px" height-full>
     <vaadin-css-layout style-name="navigation-bar" size-full>
      <vaadin-label style-name="logo" width-full plain-text>
-       Application menu 
+       g4 DKE PR 
      </vaadin-label>
      <vaadin-button icon="fonticon://Vaadin-Icons/e7b3" style-name="menu borderless" plain-text _id="menuButton">
        Menu 
@@ -19,20 +19,41 @@
       <vaadin-button icon="fonticon://Vaadin-Icons/e7e9" style-name="borderless" width-full plain-text _id="dashboard">
         Dashboard 
       </vaadin-button>
-      <vaadin-button icon="fonticon://Vaadin-Icons/e68e" style-name="borderless" width-full plain-text _id="reports">
-        Reports 
+      <vaadin-button icon="fonticon://Vaadin-Icons/e912" style-name="borderless" width-full plain-text _id="rules">
+        Rules 
       </vaadin-button>
-      <vaadin-button icon="fonticon://Vaadin-Icons/e6c0" style-name="borderless" width-full plain-text _id="customize">
-        Customize 
+      <vaadin-button icon="fonticon://Vaadin-Icons/e67f" style-name="borderless" width-full plain-text _id="contexts">
+        Contexts 
       </vaadin-button>
-      <vaadin-button icon="fonticon://Vaadin-Icons/e7d3" style-name="borderless" width-full plain-text _id="admin">
-        Admin 
+      <vaadin-button icon="fonticon://Vaadin-Icons/e67b" style-name="borderless" width-full plain-text _id="contextsClass">
+        ContextClass 
+      </vaadin-button>
+      <vaadin-button icon="fonticon://Vaadin-Icons/e7d3" style-name="borderless" width-full plain-text _id="parameter">
+        Parameter 
+      </vaadin-button>
+      <vaadin-button icon="fonticon://Vaadin-Icons/e691" style-name="borderless" width-full plain-text _id="parameterValue">
+        ParameterVal. 
+      </vaadin-button>
+      <vaadin-button icon="fonticon://Vaadin-Icons/e6ee" style-name="borderless" width-full plain-text _id="businessCase">
+        BusinessCase 
+      </vaadin-button>
+      <vaadin-button icon="fonticon://Vaadin-Icons/e621" style-name="borderless" width-full plain-text _id="businessCaseClass">
+        BusinessCaseClass 
+      </vaadin-button>
+      <vaadin-button icon="fonticon://Vaadin-Icons/e63b" style-name="borderless" width-full plain-text _id="interestSpec">
+        InterestSpec 
+      </vaadin-button>
+      <vaadin-button icon="fonticon://Vaadin-Icons/e75a" style-name="borderless" width-full plain-text _id="messagingService">
+        Messaging Service 
+      </vaadin-button>
+      <vaadin-button icon="fonticon://Vaadin-Icons/e798" style-name="borderless" width-full plain-text _id="logout">
+        Logout 
       </vaadin-button>
      </vaadin-css-layout>
     </vaadin-css-layout>
    </vaadin-css-layout>
    <vaadin-vertical-layout style-name="content-container" spacing="false" size-full margin="false" :expand>
-    <vaadin-label style-name="view-title" width-full plain-text _id="viewTitle">
+    <vaadin-label style-name="view-title" width="94.32%" plain-text _id="viewTitle">
       View title 
     </vaadin-label>
     <vaadin-css-layout size-full _id="content" :expand>
