--- a/app/src/main/resources/g4/templates/RuleDeveloperDesign.html
+++ b/app/src/main/resources/g4/templates/RuleDeveloperDesign.html
@@ -22,23 +22,11 @@
       <vaadin-button icon="fonticon://Vaadin-Icons/e67f" style-name="borderless" width-full plain-text _id="contexts">
         Contexts 
       </vaadin-button>
-      <vaadin-button icon="fonticon://Vaadin-Icons/e67b" style-name="borderless" width-full plain-text _id="contextsClass">
-        ContextClass 
-      </vaadin-button>
       <vaadin-button icon="fonticon://Vaadin-Icons/e7d3" style-name="borderless" width-full plain-text _id="parameter">
         Parameter 
       </vaadin-button>
       <vaadin-button icon="fonticon://Vaadin-Icons/e691" style-name="borderless" width-full plain-text _id="parameterValue">
         ParameterVal. 
-      </vaadin-button>
-      <vaadin-button icon="fonticon://Vaadin-Icons/e6ee" style-name="borderless" width-full plain-text _id="businessCase">
-        BusinessCase 
-      </vaadin-button>
-      <vaadin-button icon="fonticon://Vaadin-Icons/e621" style-name="borderless" width-full plain-text _id="businessCaseClass">
-        BusinessCaseClass 
-      </vaadin-button>
-      <vaadin-button icon="fonticon://Vaadin-Icons/e63b" style-name="borderless" width-full plain-text _id="interestSpec">
-        InterestSpec 
       </vaadin-button>
       <vaadin-button icon="fonticon://Vaadin-Icons/e75a" style-name="borderless" width-full plain-text _id="messagingService">
         Messaging Service 
@@ -50,7 +38,7 @@
     </vaadin-css-layout>
    </vaadin-css-layout>
    <vaadin-vertical-layout style-name="content-container" spacing="false" size-full margin="false" :expand>
-    <vaadin-label style-name="view-title" width="94.32%" plain-text _id="viewTitle">
+    <vaadin-label style-name="view-title" width-full height="50%" plain-text _id="viewTitle">
       View title 
     </vaadin-label>
     <vaadin-css-layout size-full _id="content" :expand>
