Login, RuleDeveloper Rules, Context View
Navigation RuleDeveloper

--- a/app/src/main/resources/g4/templates/RuleDeveloperDesign.html
+++ b/app/src/main/resources/g4/templates/RuleDeveloperDesign.html
@@ -38,7 +38,7 @@
     </vaadin-css-layout>
    </vaadin-css-layout>
    <vaadin-vertical-layout style-name="content-container" spacing="false" size-full margin="false" :expand>
-    <vaadin-label style-name="view-title" width-full height="50%" plain-text _id="viewTitle">
+    <vaadin-label style-name="view-title" width="94.32%" plain-text _id="viewTitle">
       View title 
     </vaadin-label>
     <vaadin-css-layout size-full _id="content" :expand>
