--- a/app/src/main/resources/g4/templates/DomainExpertDesign.html
+++ b/app/src/main/resources/g4/templates/DomainExpertDesign.html
@@ -52,7 +52,9 @@
     </vaadin-label>
     <vaadin-css-layout size-full _id="content" :expand>
      <vaadin-css-layout style-name="padding-right padding-bottom padding-left" size-full>
-      <vaadin-css-layout style-name="content-section padding" size-full></vaadin-css-layout>
+      <vaadin-css-layout style-name="content-section padding" size-full>
+       <vaadin-panel style-name="contentPanel" size-full _id="contentPanel"></vaadin-panel>
+      </vaadin-css-layout>
      </vaadin-css-layout>
     </vaadin-css-layout>
    </vaadin-vertical-layout>
